--- a/Checklists/Base.lproj/Main.storyboard
+++ b/Checklists/Base.lproj/Main.storyboard
@@ -60,20 +60,41 @@
         <scene sceneID="hlI-3A-N4n">
             <objects>
                 <tableViewController id="l7X-f3-NAM" customClass="AddItemViewController" customModule="Checklists" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="dMx-fW-6pi">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="dMx-fW-6pi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="1bV-wx-xhI">
-                                <rect key="frame" x="0.0" y="44.5" width="375" height="43.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1bV-wx-xhI" id="0Io-lP-aSF">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
+                        <sections>
+                            <tableViewSection id="vS1-8S-fbq">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="1bV-wx-xhI">
+                                        <rect key="frame" x="0.0" y="18" width="375" height="30.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1bV-wx-xhI" id="0Io-lP-aSF">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="30.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name of the item" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k6V-gx-xEc">
+                                                    <rect key="frame" x="20" y="4" width="335" height="22.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                                                    <connections>
+                                                        <action selector="done:" destination="l7X-f3-NAM" eventType="editingDidEndOnExit" id="pXK-tF-Vp0"/>
+                                                        <outlet property="delegate" destination="l7X-f3-NAM" id="Mxs-Tx-xF3"/>
+                                                    </connections>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="k6V-gx-xEc" firstAttribute="leading" secondItem="0Io-lP-aSF" secondAttribute="leading" constant="20" id="2Z5-cl-HPq"/>
+                                                <constraint firstAttribute="trailing" secondItem="k6V-gx-xEc" secondAttribute="trailing" constant="20" id="Qy3-2T-dIq"/>
+                                                <constraint firstItem="k6V-gx-xEc" firstAttribute="top" secondItem="0Io-lP-aSF" secondAttribute="top" constant="4" id="Z7x-ue-gGx"/>
+                                                <constraint firstAttribute="bottom" secondItem="k6V-gx-xEc" secondAttribute="bottom" constant="4" id="rEn-9m-65Q"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
                         <connections>
                             <outlet property="dataSource" destination="l7X-f3-NAM" id="hER-rr-MvK"/>
                             <outlet property="delegate" destination="l7X-f3-NAM" id="37u-eH-p5D"/>
@@ -85,12 +106,16 @@
                                 <action selector="cancel:" destination="l7X-f3-NAM" id="qNf-I1-9lG"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="kD0-h8-ftE">
+                        <barButtonItem key="rightBarButtonItem" enabled="NO" systemItem="done" id="kD0-h8-ftE">
                             <connections>
                                 <action selector="done:" destination="l7X-f3-NAM" id="mKb-hk-Jsj"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="doneBarButton" destination="kD0-h8-ftE" id="DZv-SL-7il"/>
+                        <outlet property="textField" destination="k6V-gx-xEc" id="icp-mQ-cib"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IjO-ko-qa6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
